<resources>
    <string name="app_name">HorizonHub-AndroidClient</string>
    <string name="btnSaveStudent">Save Student</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IntroductionTitle">The VideoGame Store\nfor AI generated Games</string>
    <string name="quality">enjoy the best Video Games\ncreated with AI tools</string>
    <string name="introductionStartButton">Let\'s Start</string>
    <string name="storeName">Horizon Hub</string>
    <string name="accountOptionsPageRegisterButtonText">Register</string>
    <string name="accountOptionsPageLoginButtonText">Login</string>
    <string name="loginPageSignIn">Sign in:</string>
    <string name="loginPageRegisterHere">Don\'t have an account yet? Register here\!</string>
    <string name="emailEditHint">Email</string>
    <string name="passwordEditHint">Password</string>
    <string name="forgotPasswordLogin">Forgot Password?</string>
    <string name="registerPageCreateAccount">Create an account:</string>
    <string name="fullNameEditHint">Full Name</string>
    <string name="registerPageRegisterButtonText">Register</string>
    <string name="RegisterPageLoginHere">Do you have an account? log in here!</string>
    <string name="blurry_background">blurry_background</string>
    <string name="texture">Texture</string>
    <string name="profile_image">profileImage</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="game_name">Game Name</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="game_image">Game Image</string>
    <string name="game_description">Game Description (at least 60 words)</string>
    <string name="recommended_price">Recommended Price</string>
    <string name="add_post">Add Post</string>
    <string name="enter_game_title">Enter game title</string>
    <string name="search_games">Search for games</string>
    <string name="game_title">Game Title</string>
    <string name="game_id">Game ID:</string>
    <string name="cheapest_price">Cheapest Price:</string>
    <string name="game_id_format">Game ID: %s</string>
    <string name="cheapest_price_format">Cheapest Price: $%s</string>
    <string name="profile">profile</string>
    <string name="addpost">addPost</string>
    <string name="allposts">allPosts</string>
    <string name="deals">deals</string>
</resources>