<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/game_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Game ID -->
    <TextView
        android:id="@+id/textViewGameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_id"
        android:textSize="16sp" />

    <!-- Cheapest price -->
    <TextView
        android:id="@+id/textViewCheapestPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheapest_price"
        android:textSize="16sp" />

    <!-- Game thumbnail -->
    <ImageView
        android:id="@+id/imageViewGameThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/texture" />

</LinearLayout>
