<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/introductionImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/texture"
        android:scaleType="centerCrop"
        android:src="@drawable/intro_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRightAddressForShopping"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvRightAddressMargin"
        android:gravity="center"
        android:text="@string/storeName"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@+id/introductionImage"
        app:layout_constraintStart_toStartOf="@+id/introductionImage"
        app:layout_constraintTop_toBottomOf="@id/introductionImage" />


    <TextView
        android:id="@+id/tvQuality"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/IntroductionTitle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvRightAddressForShopping"
        app:layout_constraintStart_toStartOf="@+id/tvRightAddressForShopping"
        app:layout_constraintTop_toBottomOf="@+id/tvRightAddressForShopping" />

    <Button
        android:id="@+id/buttonStartIntroduction"
        style="@style/whiteButtonStyle"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        android:text="@string/introductionStartButton"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintTop_toBottomOf="@id/tvQuality" />
</androidx.constraintlayout.widget.ConstraintLayout>