<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextGameName"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:hint="@string/game_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toTopOf="@id/textGuideline"
        android:autofillHints="name" />

    <Button
        android:id="@+id/buttonUploadPicture"
        style="@style/blueButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/upload_picture"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameName" />

    <ImageView
        android:id="@+id/imageViewPickedImage"
        android:layout_width="170dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadPicture"
        android:contentDescription="@string/game_image" />

    <!-- Description Field -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/game_description"
        android:inputType="textMultiLine"
        android:minLines="5"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPickedImage" />

    <!-- Recommended Price Field -->
    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/recommended_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <!-- Add Post Button -->
    <Button
        android:id="@+id/buttonAddPost"
        style="@style/blueButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_post"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePageLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePageRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>
