<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blurry_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/storeName"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_horizon_hub_shape"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toTopOf="@id/textGuideline" />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/loginPageSignIn"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="50dp"
            android:hint="@string/emailEditHint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/passwordEditHint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/etEmailLogin" />


        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/forgotPasswordLogin"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginAccountOptions"
            style="@style/blueButtonStyle"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_margin="@dimen/buttonLoginAccountOptionsMargin"
            android:text="@string/accountOptionsPageLoginButtonText"
            app:layout_constraintBottom_toTopOf="@id/tvDoNotHaveAccountYet"
            app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <TextView
            android:id="@+id/tvDoNotHaveAccountYet"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/loginPageRegisterHere"
            android:textAlignment="center"
            android:textColor="@color/g_blue"
            app:layout_constraintBottom_toBottomOf="@+id/registerGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/textGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/registerGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePageLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePageRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>