<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/storeName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textGuideline" />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/IntroductionTitle"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <ImageView
            android:id="@+id/ellipse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/texture"
            android:scaleType="centerCrop"
            android:src="@drawable/horizon_hub_logo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
            app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping" />


        <TextView
            android:id="@+id/tvQuality"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvRightAddressForShopping"
            app:layout_constraintStart_toStartOf="@+id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@+id/ellipse" />

        <Button
            android:id="@+id/buttonRegisterAccountOptions"
            style="@style/blueButtonStyle"
            android:layout_width="@dimen/smallButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            android:text="@string/accountOptionsPageRegisterButtonText"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/buttonLoginAccountOptions"
            style="@style/whiteButtonStyle"
            android:layout_width="@dimen/smallButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_margin="10dp"
            android:text="@string/accountOptionsPageLoginButtonText"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/textGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>