<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/storeName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textGuideline" />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/registerPageCreateAccount"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <EditText
            android:id="@+id/etFullNameRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="50dp"
            android:autofillHints="name"
            android:hint="@string/fullNameEditHint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping" />

        <EditText
            android:id="@+id/etEmailRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:autofillHints="emailAddress"
            android:hint="@string/emailEditHint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/etFullNameRegister" />

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:hint="@string/passwordEditHint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/etEmailRegister" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/registerPageRegisterButton"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/smallButtonHeight"
            android:layout_margin="@dimen/buttonLoginAccountOptionsMargin"
            android:text="@string/registerPageRegisterButtonText"
            app:layout_constraintBottom_toTopOf="@id/tvDoNotHaveAccountYet"
            app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
            app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
            app:layout_constraintTop_toBottomOf="@id/progressBarRegister" />

        <TextView
            android:id="@+id/tvDoNotHaveAccountYet"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/RegisterPageLoginHere"
            android:textAlignment="center"
            android:textColor="@color/g_blue"
            app:layout_constraintBottom_toBottomOf="@id/registerGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/textGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/registerGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePageLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinePageRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>