<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextGameName"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:autofillHints="name"
        android:hint="@string/game_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toTopOf="@id/textGuideline" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/game_description"
        android:inputType="textMultiLine"
        android:minLines="5"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextGameName" />

    <!-- Recommended Price Field -->
    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:hint="@string/recommended_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <!-- Add Post Button -->
    <Button
        android:id="@+id/btnEdit"
        style="@style/blueButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Edit Post"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="66dp"
        android:layout_height="53dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelinePageRight"
        app:layout_constraintStart_toStartOf="@id/guidelinePageLeft"
        app:layout_constraintTop_toBottomOf="@+id/btnEdit"
        app:layout_constraintVertical_bias="0.342"
        tools:layout_editor_absoluteX="172dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePageLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePageRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />


</androidx.constraintlayout.widget.ConstraintLayout>
